Time Tracker Developer Org/src/objects/Employer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployerCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Employers</relationshipLabel>
        <relationshipName>Employers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_employees__c</fullName>
        <label>Number of employees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Employer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>Employer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>